--- a/src/pages/Contacto/Contacto.css
+++ b/src/pages/Contacto/Contacto.css
@@ -24,6 +24,7 @@
 }
 .Perfil-wrapper{
     width: 100%;
+    max-width: 1440px;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(2, 1fr);
