--- a/src/pages/Trabajos/Trabajos.css
+++ b/src/pages/Trabajos/Trabajos.css
@@ -207,7 +207,7 @@
         gap: .5rem;
     }
     .Trabajos-grid{
-        width: auto;
+        width: 100%;
     }
     .Button-tabs{
         width: auto;
