--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@ body{
     position: fixed;
     padding: 0 3rem ;
     top: 32px;
-    z-index: 1;
+    z-index: 3;
     display: flex;
     flex-flow: row nowrap;
     justify-content: center;
@@ -45,7 +45,7 @@ body{
     transition: all .5s ease;
 }
 .Header-li:hover{
-    color: #b027ff;
+    color: var(--lila);
 }
 .Header-svg{
     margin: .5rem 0 ;
@@ -78,7 +78,7 @@ body{
     }
     .Header-nav{
         width: 100%;
-        border-radius: 24px;
+        border-radius: 16px;
         min-height: 0;
     }
     .Header-ul{
@@ -99,6 +99,6 @@ body{
         justify-content: center;
     }
     .Header-li:hover{
-        color: #e2ddd6;
+        color: var(--blanco);
     }
 }
