--- a/src/pages/Inicio/Inicio.css
+++ b/src/pages/Inicio/Inicio.css
@@ -3,9 +3,10 @@
     height: 100vh;
     color: #e2ddd6;
     min-width: 22.5rem;
+    position: relative;
 }
 .Inicio-wrapper{
-    position: absolute;
+    position: relative;
     top: 0;
     left: 0;
     width: 100%;
