--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@
 :root {
   --negro: #1a1a1a;
   --lila:#5d27ff;
-  --blanco:#e4dacc;
+  --blanco:#e2d8ad;
   /* Tipografía */
   font-family: 'Jost', sans-serif;
 }
@@ -158,4 +158,23 @@ body {
   -webkit-font-smoothing: antialiased;
   /* opcional */
   -moz-osx-font-smoothing: grayscale;
+}
+/* width */
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #1b1b1b;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #444444;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
