--- a/src/components/Fondos/Fondos.css
+++ b/src/components/Fondos/Fondos.css
@@ -4,14 +4,7 @@
     position: absolute;
     min-width: 22.5rem;
 }
-.Fondo-inicio{
-    visibility: hidden;
-    width: 100%;
-    min-height: 100vh;
-    opacity: 0;
-    position: absolute;
-    transition: all 1s ease;
-}
+
 .Video-wrapper{
     max-height: 100vh;
     overflow: hidden;
@@ -21,6 +14,14 @@
     object-fit: cover;
     width: 100%;
     height: 100vh;
+}
+.Fondo-inicio{
+    visibility: hidden;
+    width: 100%;
+    min-height: 100vh;
+    opacity: 0;
+    position: absolute;
+    transition: all 1s ease;
 }
 .Fondo-contacto{
     visibility: hidden;
@@ -37,7 +38,7 @@
     visibility: hidden;
     width: 100%;
     min-height: 100vh;
-    background-image: linear-gradient(to left top , #2b2b2b , #160d49);
+    background-image: linear-gradient(to left top , #141414 , #160d49);
     opacity: 0;
     transition: all 1s ease;
     position: absolute;
