--- a/src/pages/BeatScene/BeatScene.css
+++ b/src/pages/BeatScene/BeatScene.css
@@ -12,6 +12,11 @@
     justify-content: center;
     gap: 3rem;
     align-items: flex-start;
+
+    @media (max-width: 920px){
+        padding: 8.5rem 1rem;
+        gap: 2rem;
+    }
 }
 .Interna-hero{
     display: flex;
@@ -19,6 +24,10 @@
     justify-content: center;
     gap: 3rem;
     align-items: flex-start;
+
+    @media(max-width: 920px){
+        gap: 2rem;
+    }
 }
 .Interna-pills{
     display: flex;
@@ -36,6 +45,10 @@
     color: var(--lila);
     border-radius: 32px;
     font-weight: 500;
+
+    @media(max-width: 920px){
+        font-size: .8rem;
+    }
 }
 .Interna-pill:hover{
     border: 1px solid var(--lila);
@@ -45,6 +58,10 @@
 .Interna-img{
     border-radius: 32px;
     display: block;
+    
+    @media(max-width: 920px){
+        border-radius: 12px;
+    }
 }
 .Interna-titulo{
     width: 100%;
@@ -55,12 +72,24 @@
     padding: 3rem;
     background-color: #000;
     border-radius: 32px;
+    
+    @media (max-width: 920px){
+        padding: 2rem 1rem;
+        border-radius: 12px;
+        gap: 2rem;
+    }
 }
 .Interna-h1{
     display: block;
     font-size: 4rem;
+    line-height: 1em;
     font-weight: 600;
     color: var(--blanco);
+
+    @media (max-width: 920px){
+        font-size: 2.5rem;
+        
+    }
 }
 .Color-lila{
     color: var(--lila);
@@ -68,6 +97,10 @@
 .Interna-h2{
     font-size: 1.5rem;
     color: var(--blanco);
+
+    @media (max-width: 920px){
+        font-size: 1.2rem;
+    }
 }
 .Interna-info{
     display: flex;
@@ -75,6 +108,12 @@
     justify-content: center;
     align-items: stretch;
     gap: 1rem;
+
+    @media (max-width: 920px){
+        flex-flow: column nowrap;
+        padding: 0;
+        gap: 2rem;
+    }
 }
 .Interna-info.resultado{
     display: flex;
@@ -91,12 +130,21 @@
     align-items: flex-start;
     padding: 3rem;
     border-radius: 32px;
+
+    @media (max-width: 920px){
+        padding: 2rem 1rem ;
+        border-radius: 12px;
+    }
 }
 .derecha{
     padding: 1rem;
 }
 .derecha img{
     border-radius: 24px;
+
+    @media(max-width: 920px){
+        border-radius: 8px;
+    }
 }
 .Interna-h3{
     font-weight: 500;
@@ -124,6 +172,10 @@
     border-radius: 32px;
     padding: 2rem;
     position: relative;
+
+    @media (max-width: 920px){
+        border-radius: 12px;
+    }
 }
 .Grid-image-fondo{
     position: absolute;
@@ -135,6 +187,10 @@
     mix-blend-mode: multiply;
     border-radius: 32px;
     z-index: 0;
+
+    @media (max-width: 920px){
+        border-radius: 12px;
+    }
 }
 .Grid-article:nth-child(1){
     background-color: var(--lila);
@@ -230,17 +286,32 @@ to {
     color: var(--blanco);
     position: relative;
     z-index: 1;
+
+    @media screen and (max-width: 920px){
+        padding: 3rem 2rem;
+        border-radius: 12px;
+    }
 }
 .info-wrapper{
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-between;
     align-items: center;
+
+    @media (max-width: 920px){
+        flex-flow: column nowrap;
+        gap: 2rem;
+    }
 }
 .info-h2{
     font-size: 2rem;
     font-weight:700 ;
     line-height: 1.1em;
+
+    @media screen and (max-width: 920px){
+        font-size: 1.8rem;
+        text-align: center;
+    }
 }
 .info-button a{
     background-color: var(--lila);
@@ -254,63 +325,14 @@ to {
     align-items: center;
     gap: 2rem;
     transition: .5s all ease;
+
+    @media (max-width: 920px){
+        font-size: 1.2rem;
+        border-radius: 8px;
+    }
 }
 .info-button a:hover{
     transform: scale(1.05);
     background-color: #1a1a1a;
     color: var(--lila);
-}
-@media (max-width:767px){
-    .Interna-wrapper{
-        padding: 8rem 1rem;
-        margin: 0 auto;
-        max-width: 75rem;
-        margin-bottom: 2rem;
-    }
-    .Interna-hero{
-        margin-bottom: 2rem;
-        gap: 2rem;
-    }
-    .Interna-hero,
-    .Interna-img{
-        border-radius: 1rem;
-    }
-    .info-h2{
-        font-size: 1.6rem;
-        line-height: 1.1em;
-        text-align: center;
-
-    }
-    .info-wrapper{
-        display: flex;
-        flex-flow: column nowrap;
-        justify-content: center;
-        align-items: center;
-        gap: 2rem;
-    }
-    .Interna-Banner{
-        background-image: url('/assets/fondo-beatscene-banner-mobile.webp');
-    }
-    .Interna-titulo{
-        border-radius: 1rem;
-        padding: 2rem;
-    }
-    .Interna-info.proceso{
-        flex-flow: column-reverse nowrap;
-    }
-    .Interna-h1{
-        line-height: 90%;
-    }
-    .Interna-info{
-        flex-flow: column nowrap;
-
-    }
-    .derecha,
-    .derecha .Interna-img {
-        border-radius: 16px;
-    }
-    .izquierda{
-        padding: 2rem;
-        border-radius: 16px;
-    }
 }
