--- a/src/pages/Trabajos/Trabajos.css
+++ b/src/pages/Trabajos/Trabajos.css
@@ -3,49 +3,83 @@
     min-height: 100vh;
     color: var(--blanco);
     min-width: 22.5rem;
+    position: relative;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 7.5rem 2rem 2rem;
+
+    @media (max-width: 920px){
+        padding: 8.5rem 1rem 1rem;
+        background-image: linear-gradient(to left top , #2d2035 , #090427 );
+    }
 }
 .Trabajos-wrapper{
+    width: 100%;
+    background-color: #8f8f8f0c;
+    border-radius: 12px;
     margin: 0 auto;
-    min-height: 100vh;
     display: flex;
     flex-flow: column nowrap;
     justify-content: center;
     align-items: center;
     overflow: hidden;
-    padding: 6rem 0 0;
-    position: relative;
+    padding: 2rem;
+
+    @media (max-width: 920px){
+        padding: 2rem 1rem;
+        background-color: transparent;
+        
+    }
 }
 .Tabs-container{
     width: 100%;
     display: flex;
-    flex-flow: row nowrap;
-    justify-content: flex-start;
-    align-items: center;
-    gap: 6rem;
-    padding: 0 3rem;
-}
-.Trabajos-Tabs-wrapper{
-    display: flex;
     flex-flow: column nowrap;
     justify-content: center;
-    align-items: flex-start;
+    align-items: center;
+    gap: 3rem;
+    padding: 1rem;
+
+    @media( max-width: 920px){
+        padding: 0;
+    }
+}
+.Trabajos-Tabs-wrapper{
+    width: 100%;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: center;
+    align-items: center;
     gap: 2rem;
 
+    @media (max-width: 920px){
+        flex-flow: column nowrap;
+        gap: 1rem;
+    }
 }
 .Tabs-wrapper{
     width: 100%;
 }
 .Button-tabs{
-    width: 150px;
+    max-width: 100%;
+    min-width: 250px;
+    text-align: center;
     padding: 0.5rem 1rem;
     border: 2px solid var(--lila);
     background-color: none;
     cursor: pointer;
-    color: var(--lila);
+    color: var(--blanco);
     font-weight: 600;
     border-radius: 8px;
     transition: all .5s ease;
     opacity: .5;
+
+    @media (max-width: 920px){
+        min-width: 240px;
+        border: 2px solid var(--blanco);
+    }
 }
 .Button-tabs:hover{
     background-color: var(--lila);
@@ -53,6 +87,7 @@
     opacity: 1;
 }
 .tab-isActive{
+    border: 2px solid var(--lila);
     background-color: var(--lila);
     color: var(--blanco);
     opacity: 1;
@@ -68,158 +103,9 @@
 }
 .Trabajos-grid{
     width: 100%;
-    max-width: 1440px;
+    max-width: 1800px;
     display: grid;
     grid-template-columns: repeat(auto-fit , minmax(300px , 1fr));
     gap: 3em;
     justify-content: center;
-}
-.Trabajos-article{
-    max-width: 360px;
-    margin: 0 auto;
-    padding: 1rem;
-    background-color: #1a1a1aaa;
-    border-radius: 20px;
-    opacity: 0;
-    transition: all .5s ease;
-    animation: aparecer .5s ease ;
-    animation-fill-mode: forwards;
-}
-.Trabajos-a{
-    display: block;
-    overflow: hidden;
-    border-radius: 12px;
-}
-.Trabajos-pills{
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: flex-start;
-    align-items: center;
-    gap: .5rem;
-    padding: 1rem 0.5rem 0 0.5rem;
-}
-.Trabajos-pill{
-    padding: 8px 16px;
-    font-size: .8rem;
-    line-height: 1em;
-    background-color: #1a1a1aaa;
-    border: 1px solid var(--blanco);
-    border-radius: 32px;
-    font-weight: 500;
-    transition: .5s ease all;
-    opacity: .5;
-}
-.Trabajos-pill:hover{
-    border: 1px solid var(--lila);
-    background-color: var(--lila);
-    color: var(--blanco);
-    opacity: 1;
-}
-.Trabajos-img{
-    opacity: .7;
-    filter: grayscale(100%);
-    transition: all .5s ease;
-    border-radius: 12px;
-    object-fit: cover;
-    aspect-ratio: 3/2;
-}
-.Trabajos-info{
-    margin-top: .5rem;
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: space-between;
-    align-items: center;
-    padding: .5rem;
-}
-.Trabajos-h3{
-    display: block;
-    letter-spacing: 1px;
-    font-size: 1.6rem;
-    font-weight: 400;
-    opacity: .4;
-    transition: all .5s ease;
-}
-
-.Trabajos-rrss{
-    display: flex;
-    flex-flow: row nowrap;
-    gap: 1rem;
-    transition: all .5s ease;
-    opacity: .4;
-}
-.Trabajos-article:hover{
-    outline: 1px solid var(--lila);
-    box-shadow: 0px 0px 12px #1a1a1a55;
-}
-
-.Trabajos-article:hover .Trabajos-img,
-.Trabajos-article:hover .Trabajos-h3,
-.Trabajos-article:hover .Trabajos-rrss{
-    filter: grayscale(0%);
-    opacity: 1;
-    color: var(--lila);
-}
-.Trabajos-article:hover .Trabajos-img{
-    transform: scale(1.1);
-}
-.Trabajos-icon{
-    width: 1.5rem;
-    height: 1.5rem;
-    transition: transform .5s ease;
-}
-.Trabajos-icon:hover{
-    transform: scale(1.1);
-}
-
-@keyframes aparecer {
-    from{
-        opacity: 0;
-        transform: translateY(100px);
-    }
-    to{
-        opacity: 1;
-        transform: translateY(0);
-    }
-}
-@media (max-width: 1023px){
-    
-    .Tabs-container{
-        flex-flow: column;
-        align-items: center;
-        gap: 2rem;
-        padding: 6rem 1rem 1rem;
-    }
-    .Trabajos-wrapper{
-        justify-content: flex-start;
-        padding: 2rem 0 6rem;
-        background-image: linear-gradient(to left top , #2b2b2b , #160d49);
-        min-height: 100vh;
-    }
-    .Trabajos-Tabs-wrapper{
-        flex-flow: row;
-        width: 100%;
-        justify-content: center;
-        gap: 2rem;
-    }
-}
-@media (max-width:767px) {
-    .Trabajos-Tabs-wrapper{
-        width: 100%;
-        justify-content: space-between;
-        gap: .5rem;
-    }
-    .Trabajos-grid{
-        width: 100%;
-    }
-    .Button-tabs{
-        width: auto;
-        font-size: .9rem;
-    }
-    .Trabajos-h3{
-        font-size: 1.5rem;
-    }
-    .Trabajos-rrss .Redes-icon{
-        margin-bottom: 0;
-    }
-
 }
