--- a/src/pages/SobreMi/SobreMi.css
+++ b/src/pages/SobreMi/SobreMi.css
@@ -35,8 +35,9 @@
 
     @media (max-width: 57.5rem){
         grid-template-columns: repeat(1, 1fr);
-        grid-template-rows: auto;
+        grid-template-rows: repeat(1, auto);
         max-height: 100%;
+        height: auto;
     }
 }
 .grid-container{
