--- a/src/pages/SobreMi/SobreMi.css
+++ b/src/pages/SobreMi/SobreMi.css
@@ -33,11 +33,11 @@
     gap: 2rem;
     overflow: hidden;
 
-    @media (max-width: 57.5rem){
+    @media(max-width: 57.5rem){
         grid-template-columns: repeat(1, 1fr);
         grid-template-rows: repeat(6, auto);
-        max-height: 100%;
-        height: auto;
+        gap: 1rem;
+        max-height: fit-content;
     }
 }
 .grid-container{
